# openvisionx-platform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  pyrightconfig.json
.github/: CODEOWNERS  SECURITY.md  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml  stale.yml
docs/: README.md
docs/api/: README.md
docs/architecture/: architecture.md  coding-style.md  project-structure.md
docs/architecture/adr/: ADR-0001-platform.md  ADR-0002-package-structure.md  ADR-0003-core.md  ADR-0004-engine.md  README.md
docs/roadmap/: milestones.md  roadmap.md
docs/sprint/: sprint-01.md  sprint-02.md
examples/: 001_gray.py  002_threshold.py  003_resize.py
src/openvisionx/core/: __init__.py  base_tool.py  constants.py  exceptions.py  execution_context.py  logger.py  metadata.py  version.py
src/openvisionx/data/: __init__.py  exceptions.py  image.py  pixel_format.py  point.py  (+3 more)
tests/core/: test_base_tool.py  test_constants.py  test_exceptions.py  test_execution_context.py  test_logger.py  test_metadata.py  test_version.py
tests/data/: test_image.py  test_pixel_format.py  test_roi.py
tests/engine/: test_pipeline.py  test_pipeline_result.py  test_pipeline_status.py  test_tool_collection.py
tests/geometry/: test_rectangle.py
tests/params/: test_field_types.py
tests/vision/: test_base_vision_tool.py  test_crop_tool.py  test_gray_tool.py  test_image_io.py  test_resize_tool.py  test_threshold_tool.py  test_tool_registry.py
(+45 files in other folders)
